Block Reality/build_err_utf8.txt
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.8/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Task :api:compileJava
.\gradlew : C:\Users\wmc02\Des
ktop\Block-Realityapi-Fast-des
ign-main\Block Reality\api\src
\main\java\com\blockreality\ap
i\client\render\rt\BRVulkanDev
ice.java:33: error: cannot fin
d symbol
位於 線路:1 字元:1
+ .\gradlew :api:compileJava -
-console=plain > build_err.txt
 2>&1; Get- ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~
    + CategoryInfo          : 
    NotSpecified: (C:\Users\  
  wmc02\...not find symbol:   
 String) [], RemoteExcepti    
on
    + FullyQualifiedErrorId : 
    NativeCommandError
 
import static org.lwjgl.vulkan
.NVClusterAccelerationStructur
e.*;
                              
^
  symbol:   class NVClusterAcc
elerationStructure
  location: package org.lwjgl.
vulkan
C:\Users\wmc02\Desktop\Block-R
ealityapi-Fast-design-main\Blo
ck Reality\api\src\main\java\c
om\blockreality\api\client\ren
der\rt\BRVulkanDevice.java:34:
 error: cannot find symbol
import static org.lwjgl.vulkan
.NVCooperativeVector.*;
                              
^
  symbol:   class NVCooperativ
eVector
  location: package org.lwjgl.
vulkan
C:\Users\wmc02\Desktop\Block-R
ealityapi-Fast-design-main\Blo
ck Reality\api\src\main\java\c
om\blockreality\api\client\ren
der\rt\BRVulkanRT.java:1719: w
arning: [removal] BRSVGFDenois
er in com.blockreality.api.cli
ent.render.rt has been depreca
ted and marked for removal
            if (BRSVGFDenoiser
.isInitialized()) {
                ^
2 errors
1 warning

> Task :api:compileJava FAILED

FAILURE: Build failed with an 
exception.

* What went wrong:
Execution failed for task ':ap
i:compileJava'.
> Compilation failed; see the 
compiler error output for deta
ils.

* Try:
> Run with --info option to ge
t more log output.
> Run with --scan to get full 
insights.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.8/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 14s
1 actionable task: 1 executed
